# log.cpp

./: .gitignore  CMakeLists.txt
src/: log.cpp  log.hpp
